--- a/05-clima-app/package.json
+++ b/05-clima-app/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.2",
     "colors": "^1.4.0",
-    "inquirer": "^8.0.0"
+    "fetch": "^1.1.0",
+    "inquirer": "^8.0.0",
+    "request": "^2.88.2"
   }
 }
