--- a/05-clima-app/package.json
+++ b/05-clima-app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.3.2",
     "colors": "^1.4.0",
+    "dotenv": "^16.0.3",
     "fetch": "^1.1.0",
     "inquirer": "^8.0.0",
     "request": "^2.88.2"
