--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 /04-tareas-hacer/node_modules
 /05-clima-app/node_modules
-/06-webserver/node_modules
 /05-clima-app/.env
+/07-restserver/.env
+/06-webserver/node_modules
+/07-restserver/node_modules
